# Fuego

./: .clang-format  CMakeLists.txt
.github/workflows/: build_validation.yml
CoreLib/: CMakeLists.txt  DefaultAllocator.h  UniquePtr.h  tests.cpp
DevOps/: format_all_files.ps1  format_all_files.sh  format_all_files_all_platforms.py
Engine/: CMakeLists.txt  ImGui.cmake
Engine/Editor/: Scene.cpp  Scene.h
Engine/Fuego/: Application.cpp  Application.h  AssetsManager.cpp  Input.h  Log.h  Scene.cpp  Window.h
Engine/Fuego/Events/: Event.h
Engine/Fuego/FileSystem/: FileSystem.cpp  FileSystem.h
Engine/Fuego/MacOS/: CMakeLists.txt  InputMacOS.h  TimeMacOS.cpp  TimeMacOS.h
Engine/Fuego/Renderer/: Buffer.h  CMakeLists.txt  CommandBuffer.h  Device.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Shader.h  Surface.h  Texture.h
Engine/Fuego/Windows/: CMakeLists.txt  InputWin.cpp  InputWin.h  WindowWin.cpp  WindowWin.h
Engine/Fuego/Windows/OpenGL/: BufferOpenGL.cpp  BufferOpenGL.h  CommandBufferOpenGL.cpp  CommandBufferOpenGL.h  CommandQueueOpenGL.cpp  CommandQueueOpenGL.h  DeviceOpenGL.cpp  DeviceOpenGL.h  OpenGLContext.cpp  ShaderOpenGL.cpp  ShaderOpenGL.h  ShaderOpenGLFragment.cpp  SurfaceOpenGL.cpp  SurfaceOpenGL.h  SurfaceWindows.cpp  SurfaceWindows.h  SwapchainOpenGL.cpp  SwapchainOpenGL.h  TextureOpenGL.cpp  TextureOpenGL.h
Engine/Fuego/Windows/OpenGL/Shaders/: FragmentShader.frag  VertexShader.vert
Sandbox/: SandboxApp.cpp
Sandbox/Resources/Windows/Shaders/: ps_triangle.glsl  vs_shader.glsl
ShaderTranslator/: CMakeLists.txt  Main.cpp  ShaderTranslator.cpp
ShaderTranslator/Include/Fuego/: ShaderTranslator.hpp
Tests/: CMakeLists.txt
Tests/include/: Tests.h
